[package]
name = "raydium_v4_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-client = "1.18"
solana-sdk = "1.18"
solana-program = "1.18"
solana-transaction-status = "1.18"
spl-token = "4.0"
borsh = "1.5"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
log = "0.4"
env_logger = "0.10"
futures = "0.3"
bs58 = "0.5"